<resources>
    <string name="app_name">Pi Light Control</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Address">Address</string>
    <string name="Port">Port</string>
    <string name="Brightness">Brightness</string>
    <string name="Server">Server</string>

    <string name="saved_address_key">saved_address</string>
    <string name="saved_address_default" />

    <string name="saved_port_key">saved_port</string>
    <string name="saved_port_default" />

    <string name="saved_connected_key">saved_connected</string>
    <string name="saved_auto_reconnect_key">saved_auto_reconnect</string>
    <string name="saved_brightness_key">saved_brightness_key</string>
</resources>
