<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="matthew.pilightcontrol.MainActivity">

    <TextView
        android:id="@+id/brightnessTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Brightness"/>

    <SeekBar
        android:id="@+id/brightnessSeekBar"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:progress="10"
        android:max="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Server"
        android:id="@+id/serverTextView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:layout_weight="1.9"
            android:hint="@string/Address"/>

        <EditText
            android:id="@+id/portEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="0.75"
            android:hint="@string/Port" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Connect"
            android:layout_weight="1.2"
            android:onClick="connectButtonOnClick"
            android:id="@+id/connectButton" />

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Auto Reconnect"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/autoReconnectSwitch" />


</LinearLayout>
